--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -13,6 +13,6 @@
   z-index: 1;
 
   @media (min-width: 48rem) {
-    padding: 1.875rem 0;
+    padding: 1.875rem 1.125rem;
   }
 }
